@@ -1,0 +1,4 @@
+module Admin
+  class LineItemsController < Admin::ApplicationController
+  end
+end
